# EventApp

./: .env.example  README.md  docker-compose.yml.dev  pyproject.toml
apps/event/: apps.py  models.py  tests.py  urls.py
apps/event/api/v1/: serializers.py  services.py  views.py
apps/event/migrations/: 0001_initial.py
conf/: asgi.py  urls.py  wsgi.py
conf/settings/: base.py
core/: urls.py  views.py
